core#18415 issue-18415-warning-icon-overlaping-label (#1343)
* core#18415 fix

* Removed border in configuration area in App Detail Page

--- a/src/app/portlets/dot-apps/dot-apps-configuration-detail/dot-apps-configuration-detail.component.scss
+++ b/src/app/portlets/dot-apps/dot-apps-configuration-detail/dot-apps-configuration-detail.component.scss
@@ -20,7 +20,6 @@
 }
 
 .dot-apps-configuration-detail__body {
-    border: 1px solid $gray-lighter;
     flex-grow: 1;
     margin: 0 $basic-padding * 2 $basic-padding * 2;
 }
